# AProtoGen

./: .gitignore  CMakeLists.txt  gencscope.sh
AConvert/: AConvert.cpp  AResource.proto  CMakeLists.txt  c_base_generator.cpp  c_base_generator.h  c_generator.cpp  c_generator.h
AConvert/flatproto/: CMakeLists.txt  c_base_generator.cpp  c_base_generator.h  c_enum_field.cpp  c_field.cpp  c_file.cpp  c_file.h  c_gen_decode.cpp  c_gen_encode.cpp  c_gen_json.cpp  c_gen_json.h  c_gen_speed_test.cpp  c_gen_speed_test.h  c_gen_string.h  c_gen_unit_test.h  c_generator.cpp  c_generator_helpers.cpp  c_generator_helpers.h  c_generator_resource.cpp  c_generator_resource.h  c_generator_total.cpp  c_message.cpp  c_message_field.cpp  c_message_field.h  c_primitive_field.cpp  c_primitive_field.h  c_string_field.cpp  c_string_field.h
AConvert/flatproto_unittest/: AConvertUnitTest.cpp  CMakeLists.txt
AConvert/proto/: pbc_extension.h  pbc_extension.proto  pbc_extension_clear.c  pbc_extension_clear.h  pbc_extension_decodec.h  pbc_extension_encodec.c  pbc_extension_encodec.h  pbc_extension_json.h  pbc_extension_string.c  pbc_extension_string.h
AConvert/test_proto/: AResource.h  AResource.pb.cc  AResource.pb.h  AResource.proto  AResource_clear.c  AResource_clear.h  AResource_decodec.h  AResource_encodec.c  AResource_encodec.h  AResource_json.c  AResource_json.h  AResource_speed_test.cpp  AResource_speed_test.h  AResource_string.c  AResource_string.h  AResource_unit_test.cpp  AResource_unit_test.h  pbc_extension.pb.cc
AProtoGen/: AConvert.cpp  CMakeLists.txt  c_enum_field.cpp  c_enum_field.h  c_field.cpp  c_field.h  c_file.cpp  c_gen_assign.cpp  c_gen_clear.cpp  c_gen_encode.cpp  c_gen_string.cpp  c_gen_unit_test.cpp  c_generator.cpp  c_generator.h  c_generator_helpers.cpp  c_generator_helpers.h  c_generator_resource.cpp  c_generator_total.cpp  c_generator_total.h  c_helper.h  c_message.cpp  c_message_field.cpp  c_primitive_field.cpp  c_primitive_field.h  c_string_field.cpp  c_string_field.h  mathlimits.h
AProtoGenUnittest/: AConvertSpeedTest.cpp  AConvertUnitTest.cpp  CMakeLists.txt
flatproto/: AConvert.cpp  AConvert.h  CMakeLists.txt  c_enum_field.cpp  c_enum_field.h  c_field.cpp  c_field.h  c_file.cpp  c_gen_assign.h  c_gen_clear.h  c_gen_decode.cpp  c_gen_decode.h  c_gen_encode.h  c_gen_json.cpp  c_generator.cpp  c_generator.h  c_generator_helpers.cpp  c_generator_helpers.h  c_generator_total.cpp  c_generator_total.h  c_helper.cpp  c_message.cpp  c_message.h  c_message_field.cpp  c_message_field.h  c_primitive_field.cpp  c_string_field.cpp  c_string_field.h  mathlimits.cc
flatproto_unittest/: AConvertSpeedTest.cpp  AConvertUnitTest.cpp  CMakeLists.txt
lib/: libprotobuf-lite.lib
proto/: aext.proto  pbc_extension.h  pbc_extension.pb.h  pbc_extension_assign.h  pbc_extension_decodec.cpp  pbc_extension_decodec.h  pbc_extension_encodec.cpp  pbc_extension_encodec.h  pbc_extension_json.cpp  pbc_extension_json.h  pbc_extension_speed_test.cpp  pbc_extension_speed_test.h  pbc_extension_string.h  pbc_extension_unit_test.cpp  pbc_extension_unit_test.h  util.h
test_proto/: AProtocol.proto  AResource.h  AResource.pb.cc  AResource.pb.h  AResource.proto  AResource_assign.h  AResource_clear.c  AResource_decodec.c  AResource_decodec.cpp  AResource_decodec.h  AResource_encodec.c  AResource_encodec.cpp  AResource_encodec.h  AResource_json.cpp  AResource_json.h  AResource_speed_test.cpp  AResource_speed_test.h  AResource_string.c  AResource_string.h  AResource_unit_test.cpp  AResource_unit_test.h
